--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -26,7 +26,12 @@
 
   // Theme Colors:
   --primary-color: rgba(from var(--color-primary) r g b / 0.4);
-  --super-green: rgba(from var(--color-super-green) r g b / 0.6);
+  --info-color: rgba(from var(--color-highite) r g b / 1);
+  --success-color: rgba(from var(--color-super-green) r g b / 0.4);
+  --warning-color: rgba(from var(--color-yellow) r g b / 0.4);
+  --danger-color: rgba(from var(--color-red) r g b / 0.4);
+  --super-green: rgb(from var(--color-super-green) r g b );
+
   --text-color: var(--color-white);
   --bg-color: var(--color-black);
 
