--- a/src/assets/scss/_animations.scss
+++ b/src/assets/scss/_animations.scss
@@ -4,13 +4,48 @@
     animation-name: pulse;
     animation-duration: 2s;
     animation-iteration-count: 1;
-    animation-delay: $i * 1s;
+    animation-delay: 2s + $i * 1s;
   }
 }
 
-@keyframes pulse {
-  0% {background: var( --primary-color);}
-  50% {background: var( --super-green);}
-  100% {background: var( --primary-color);}
+
+@for $i from 1 through 13 {
+  .holder *:nth-child(n + #{$i}) {
+    opacity: 0;
+    animation: fade-in 0.6s forwards;
+    animation-delay: $i * .2s;
+  }
 }
 
+.pop-in {
+  scale: .8; opacity: 0;
+  animation: fade-in linear forwards;
+  animation-timeline: view();
+  animation-range: 2% 30%;
+}
+
+@keyframes pulse {
+  0% {
+    background: var(--primary-color);
+  }
+  50% {
+    background: var(--super-green);
+  }
+  100% {
+    background: var(--primary-color);
+  }
+}
+
+@keyframes fade-in {
+  to {
+    opacity: 1;
+    scale: 1
+  }
+}
+
+@keyframes fade-out {
+  to {
+    opacity: 0;
+    scale: 1.4
+  }
+}
