--- a/src/assets/scss/_stat.scss
+++ b/src/assets/scss/_stat.scss
@@ -7,24 +7,31 @@
   //gap: 2rem 0.5rem;
   justify-content: space-between;
   //margin-top: 2rem;
-  //margin-bottom: 2rem;
 
-  padding: 0 10%;
+
+  padding: 0 5%;
   //border: 1px solid var(--primary-color);
 
 
 }
 
 .stat {
+
   background: rgba(from var(--primary-color) r g b / 0.2);
-  backdrop-filter: blur(10px);
-  margin-bottom: max(10px, 2rem);
-  text-align: center;
-  //border: var(--global-border);
-  //border-radius: var(--global-radius);
+  border: var(--global-border);
+  border-radius: var(--global-radius);
+  box-shadow:   0 0 10px rgba(0, 0, 0, 0.4);
   padding: 1rem 2rem;
-  clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 20px, 100% 100%, 0 100%);
-  //box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.9);
+
+  //background: rgba(from var(--primary-color) r g b / 1);
+  //backdrop-filter: blur(10px);
+  //margin-bottom: max(10px, 2rem);
+  //text-align: center;
+  ////border: var(--global-border);
+  ////border-radius: var(--global-radius);
+  //padding: 1rem 2rem;
+  //clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 20px, 100% 100%, 0 100%);
+  //box-shadow:  0 0 10px 10px rgba(0, 0, 0, 0.9);
 
   .stat-title {
     font-size: 1.4rem;
@@ -41,8 +48,8 @@
 
   position: relative;
   //border: 1px solid var(--primary-color);
-  //border-radius: var(--global-radius);
-  clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%, 10% 0%);
+  border-radius: var(--global-radius);
+  //clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%, 10% 0%);
   background-color: var(--primary-color);
   box-shadow:  0 0 2px #000;
 
@@ -50,7 +57,7 @@
 
 
   span {
-    //border-radius:  var(--global-radius) 0 0 var(--global-radius);
+    border-radius:  var(--global-radius) 0 0 var(--global-radius);
     display: block;
     height: 100%;
     position: relative;
