--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -1,16 +1,55 @@
 .card {
   border: var(--global-border);
-  padding: clamp(5px, 2rem, 4rem) clamp(5px, 1.4rem, 2rem);
+
   background: rgba(from var(--primary-color) r g b / 0.05);
   border-radius: var(--global-radius);
   backdrop-filter: blur(10px);
-  margin: clamp(5px, 2rem, 3rem) auto;
+  //margin: clamp(5px, 2rem, 3rem) auto;
   transition: all 1s ease-in-out;
+
+  display: flex;
 
   &:hover {
     border: rgba(from var(--primary-color) r g b / 0.6) 1px solid;
     background: rgba(from var(--primary-color) r g b / 0.2);
     transition: all 0.2s ease-in-out;
 
+    .image img{
+      opacity: 0.1;
+      transition: all 0.5s ease-in-out;
+    }
+
   }
+
+  .card-body{
+    padding: clamp(5px, 2rem, 4rem) clamp(5px, 1.4rem, 2rem);
+  }
+  .image{
+    //border: inset 1px red;
+    margin: 0;
+    padding: 0;
+    border-radius: var(--global-radius) 0 0 var(--global-radius);
+    width: 10%;
+    //clip-path: circle(50% at top right);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    object-position: end center;
+  }
+  .image img{
+    //max-width: 200px;
+    //width: 100%;
+    height: 100%;
+    margin: auto;
+    opacity: 0.3;
+    border-radius: var(--global-radius) 0 0 var(--global-radius);
+
+    //scale: 0.8;
+    object-fit: cover;
+    object-position: 80% 100%;
+
+
+  }
+
 }
