--- a/src/assets/scss/_margins.scss
+++ b/src/assets/scss/_margins.scss
@@ -1,27 +1,55 @@
 $step: 0.5rem;
-.m{
+.m {
+  &-0 {
+    margin: 0;
+  }
+
+  &t-0 {
+    margin-top: 0;
+  }
+
+  &b-0 {
+    margin-bottom: 0;
+  }
+
+  &s-0 {
+    margin-left: 0;
+  }
+
+  &e-0 {
+    margin-right: 0;
+  }
+
+  &x-0 {
+    margin-left: 0;
+  }
+
+  &y-0 {
+    margin-top: 0;
+  }
+
 
   @for $i from 1 through 20 {
-    &-#{$i}{
+    &-#{$i} {
       margin: $i * $step;
     }
-    &t-#{$i}{
+    &t-#{$i} {
       margin-top: $i * $step;
     }
-    &b-#{$i}{
+    &b-#{$i} {
       margin-bottom: $i * $step;
     }
-    &s-#{$i}{
+    &s-#{$i} {
       margin-left: $i * $step;
     }
-    &e-#{$i}{
+    &e-#{$i} {
       margin-right: $i * $step;
     }
-    &x-#{$i}{
+    &x-#{$i} {
       margin-left: $i * $step;
       margin-right: $i * $step;
     }
-    &y-#{$i}{
+    &y-#{$i} {
       margin-top: $i * $step;
       margin-bottom: $i * $step;
     }
