--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -79,25 +79,55 @@
 h1, .h1 {
   font-size: 3rem;
   line-height: 1.2;
+
+  & small{
+    font-size: 1.5rem;
+    display: block;
+  }
 }
 
 h2, .h2 {
   font-size: 2.3rem;
+
+  & small{
+    font-size: 1.2rem;
+    display: block;
+  }
 }
 
 h3, .h3 {
   font-size: 1.8rem;
+
+  & small{
+    font-size: 1rem;
+    display: block;
+  }
 }
 
 h4, .h4 {
   font-size: 1.5rem;
+
+  & small{
+    font-size: 0.8rem;
+    display: block;
+  }
 }
 
 h5, .h5 {
   font-size: 1.2rem;
+
+  & small{
+    font-size: 0.7rem;
+    display: block;
+  }
 }
 
 h6, .h6 {
   font-size: 0.8rem;
+
+  & small{
+    font-size: 0.6rem;
+    display: block;
+  }
 }
 
