--- a/src/assets/scss/_animations.scss
+++ b/src/assets/scss/_animations.scss
@@ -8,7 +8,6 @@
   }
 }
 
-
 @for $i from 1 through 13 {
   .holder *:nth-child(n + #{$i}) {
     opacity: 0;
@@ -30,6 +29,8 @@
   }
   50% {
     background: var(--super-green);
+    scale: 1.2;
+
   }
   100% {
     background: var(--primary-color);
