--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,15 +1,21 @@
 @forward "variables";
+@forward "fonts";
 @forward "animations";
 @forward "containers";
+@forward "backgrounds";
 @forward "typography";
 @forward "nav";
 @forward "card";
 @forward "hero";
 @forward "links";
+@forward "lists";
 @forward "buttons";
 @forward "stat";
 @forward "tags";
 @forward "gap";
 @forward "margins";
+@forward "paddings";
 @forward "timeline";
+@forward "borders";
+@forward "shadows";
 
