--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -4,9 +4,7 @@
   background: rgba(from var(--primary-color) r g b / 0.05);
   border-radius: var(--global-radius);
   backdrop-filter: blur(10px);
-  //margin: clamp(5px, 2rem, 3rem) auto;
   transition: all 1s ease-in-out;
-
   display: flex;
 
   &:hover {
@@ -14,42 +12,58 @@
     background: rgba(from var(--primary-color) r g b / 0.2);
     transition: all 0.2s ease-in-out;
 
-    .image img{
-      opacity: 0.1;
-      transition: all 0.5s ease-in-out;
+    .card-circle-image img {
+      opacity: 0.10;
+      filter: blur(0px);
+      transition: all 0.5s ease-out;
     }
-
   }
 
-  .card-body{
+  .card-body {
     padding: clamp(5px, 2rem, 4rem) clamp(5px, 1.4rem, 2rem);
+    width: 100%;
   }
-  .image{
-    //border: inset 1px red;
-    margin: 0;
-    padding: 0;
-    border-radius: var(--global-radius) 0 0 var(--global-radius);
-    width: 10%;
-    //clip-path: circle(50% at top right);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    object-position: end center;
-  }
-  .image img{
-    //max-width: 200px;
-    //width: 100%;
+
+  .card-circle-image {
+    width: 100%;
     height: 100%;
-    margin: auto;
-    opacity: 0.3;
-    border-radius: var(--global-radius) 0 0 var(--global-radius);
+    border-radius: var(--global-radius);
+    position: absolute;
+    overflow: hidden;
+    z-index: -1;
 
-    //scale: 0.8;
-    object-fit: cover;
-    object-position: 80% 100%;
-
-
+    & img {
+//      width: 800px;
+      min-height: 100%;
+      margin-top: -20%;
+      margin-left: -20%;
+      clip-path: circle(80% at top left);
+      object-fit: cover;
+      position: relative;
+      display: block;
+      opacity: 0.4;
+      filter: blur(10px);
+      transition: all 0.5s ease-out;
+      z-index: -1;
+    }
   }
 
+}
+
+.sub-card {
+  padding: 1rem;
+  border: var(--global-border);
+  border-radius: var(--global-radius);
+  font-size: 0.9rem;
+
+}
+
+.card:has(.sub-card) .sub-card{
+  box-shadow: none;
+  transition: all 0.5s ease-in-out;
+}
+.card:has(.sub-card):hover .sub-card{
+  background: rgba(from var(--primary-color) r g b / 0.3);
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  transition: all 0.5s ease-in-out;
 }
