--- a/src/assets/scss/_containers.scss
+++ b/src/assets/scss/_containers.scss
@@ -1,15 +1,7 @@
 body {
-  font-family: "Switzer", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+
   color: var(--text-color);
   background-color: var(--bg-color);
-  //background: url("../images/concept_2.png") no-repeat center center fixed;
-  //background-size: cover;
-
-
-  letter-spacing: .01rem;
 
   &:before {
     content: "";
@@ -26,8 +18,45 @@ body {
   }
 }
 
-
 .container {
   width: clamp(320px, 90%, 1200px);
   margin: 0 auto;
+}
+
+.flex {
+  display: flex;
+  &-half {
+    width: 50%;
+  }
+  &-third {
+    width: 33.33%;
+  }
+  &-quarter {
+    width: 25%;
+  }
+
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.justify {
+  &-start { justify-content: flex-start; }
+  &-center { justify-content: center; }
+  &-between { justify-content: space-between; }
+  &-around { justify-content: space-around; }
+  &-evenly { justify-content: space-evenly; }
+}
+
+.align {
+  &-start { align-items: flex-start; }
+  &-center { align-items: center; }
+  &-end { align-items: flex-end; }
+  &-stretch { align-items: stretch; }
+  &-botom { align-items: baseline; }
+  &-top{
+    align-items: flex-start;
+  }
 }
