--- a/src/assets/scss/_stat.scss
+++ b/src/assets/scss/_stat.scss
@@ -1,73 +1,47 @@
 @forward "variables";
 
 .stats {
-
   display: flex;
   flex-wrap: wrap;
-  //gap: 2rem 0.5rem;
   justify-content: space-between;
-  //margin-top: 2rem;
-
-
-  padding: 0 5%;
-  //border: 1px solid var(--primary-color);
-
-
+  width: 100%;
+  margin: 0 auto;
 }
 
 .stat {
-
   background: rgba(from var(--primary-color) r g b / 0.2);
   border: var(--global-border);
   border-radius: var(--global-radius);
-  box-shadow:   0 0 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   padding: 1rem 2rem;
-
-  //background: rgba(from var(--primary-color) r g b / 1);
-  //backdrop-filter: blur(10px);
-  //margin-bottom: max(10px, 2rem);
-  //text-align: center;
-  ////border: var(--global-border);
-  ////border-radius: var(--global-radius);
-  //padding: 1rem 2rem;
-  //clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 20px, 100% 100%, 0 100%);
-  //box-shadow:  0 0 10px 10px rgba(0, 0, 0, 0.9);
-
+  font-weight: 500;
+  min-width: 200px;
   .stat-title {
     font-size: 1.4rem;
   }
-
 
 }
 
 .progressbar {
   box-sizing: content-box;
   height: 10px;
-
-  margin: 1rem -20px 0rem;
-
+//  margin: 1rem -20px 0rem;
   position: relative;
-  //border: 1px solid var(--primary-color);
   border-radius: var(--global-radius);
-  //clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%, 10% 0%);
   background-color: var(--primary-color);
-  box-shadow:  0 0 2px #000;
-
-
-
+  box-shadow: 0 0 2px #000;
+  overflow: hidden;
 
   span {
-    border-radius:  var(--global-radius) 0 0 var(--global-radius);
+    border-radius: var(--global-radius) 0 0 var(--global-radius);
     display: block;
     height: 100%;
     position: relative;
     overflow: hidden;
     background-color: rgba(from var(--super-green) r g b / 0.6);
-    //clip-path: polygon(90% 0%, 100% 50%, 90% 100%, 0% 100%, 10% 50%, 0% 0%);
-    box-shadow:  0 0 2px #000;
+    box-shadow: 0 0 2px #000;
   }
 }
-
 
 .holder {
   height: 50px;
@@ -79,7 +53,6 @@
   content: "";
   height: 10px;
   width: 100%;
-
   position: relative;
   top: -25px;
   z-index: -1;
