--- a/src/assets/scss/_containers.scss
+++ b/src/assets/scss/_containers.scss
@@ -25,8 +25,14 @@ body {
 
 .flex {
   display: flex;
+  max-width: 100%;
+  flex-wrap: wrap;
   &-half {
-    width: 50%;
+    width: calc(50% - 0.5rem);
+//    min-width: calc(50% - $gap) ;
+//    max-width: 100% ;
+//    flex-wrap: wrap;
+//    border: 1px solid red;
   }
   &-third {
     width: 33.33%;
@@ -56,7 +62,7 @@ body {
   &-end { align-items: flex-end; }
   &-stretch { align-items: stretch; }
   &-botom { align-items: baseline; }
-  &-top{
+  &-top {
     align-items: flex-start;
   }
 }
