--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,9 @@
 @forward "variables";
+@forward "flex";
+@forward "grid";
 @forward "fonts";
+@forward "justify";
+@forward "align";
 @forward "animations";
 @forward "containers";
 @forward "backgrounds";
