--- a/src/assets/scss/_backgrounds.scss
+++ b/src/assets/scss/_backgrounds.scss
@@ -5,3 +5,11 @@
   background:  rgba(from var(--color-black) r g b / 0.2);
 
 }
+
+///// LOGO
+#logo-c{
+  fill: var(--color-white);
+}
+#logo-v{
+  fill: var(--primary-color);
+}
