--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,17 @@
 :root {
 
   //specific colors:
-  --color-primary: #1d72a2;
+    --color-primary: #1d72a2; // original
+  //  --color-primary: #47de95 // emerald;
+//  --color-primary: #1d92a2; // very nice
+//  --color-primary: #9e9e9e; // dark grey
+//  --color-primary: #8f6cd4; // Purple - not bad at all
+//  --color-primary: #e60077; // hotpink
+//  --color-primary: #1d92a2;
+//  --color-primary: #e61252; // chery red
   --color-highite: #2590D2;
+//  --color-highite: #e61227; // red
+//  --color-highite: #17a2b8;
   --color-super-green: #72B01D;
 
   // default colors:
