--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -1,10 +1,13 @@
 .btn {
   color: var(--text-color);
   text-decoration: none;
-  font-weight: 600;
-  border-radius: 0.2rem;
-  padding: 0.2rem 1.5rem;
-  transition: all 0.8s ease-in-out;
+  font-weight: 500;
+  border-radius: 3px;
+
+  padding: 3px 8px;
+  margin: 0 5px;
+
+  transition: all 1.2s ease-out;
 
   &.high-lite {
     background-color: rgba(from var(--color-highite) r g b / 0.2);
