--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -4,17 +4,27 @@
   font-weight: 500;
   border-radius: 3px;
 
-  padding: 3px 8px;
+  padding: 5px 10px;
   margin: 0 5px;
 
   transition: all 1.2s ease-out;
 
+//  background: #1f5966;
+//  background: linear-gradient(0deg, rgba(from var(--primary-color) r g b / .2) 25%, rgba(from var(--primary-color) r g b / 0.1) 100%);
+
+  border:  1px solid transparent;
+
+
   &.high-lite {
-    background-color: rgba(from var(--color-highite) r g b / 0.2);
+//    background-color: rgba(from var(--color-highite) r g b / 0.2);
+    background: linear-gradient(0deg, rgba(from var(--color-highite) r g b / .6) 25%, rgba(from var(--color-highite) r g b / 0.4) 100%);
+
   }
 
   &:hover {
     background-color: rgba(from var(--color-highite) r g b / 0.4);
+    box-shadow: 0 0 10px  rgba(from var(--color-highite) r g b / 0.7);
+    border: 1px solid rgba(from var(--color-white) r g b / 0.2);
     transition: all 0.2s ease-in-out;
   }
 
